# codebox

./: .dockerignore  .flake8  .hgignore  .hgtags  CONTRIBUTING.rst  Dockerfile  Dockerfile.test  Makefile  README.rst  flake8.ini  hypercorn.toml  main.py  pyproject.toml  setup.cfg  yapf.ini
.github/workflows/: continuous-integration.yml
app/: codebox.py  config.py  main.py  models.py  nsjail.cfg  nsjail.py  utils.py
app/metrics/: cpplint.py  lint.py  lint_messages.py  metrics.py
app/nsjail/: cgroup.py  config_pb2.py  nsjail.cfg  nsjail.py  swap.py
codebox/: codebox.py  config.py  exception_handlers.py  main.py  resources.py  utils.py
codebox/nsjail/: cgroup.py  nsjail.py
codebox/routers/: execute.py
doc/: especificacao.rst  lint.rst  visualizacao.rst
src/: Dockerfile  codebox.py  requirements.txt
src/metrics/: metrics.py
test/: test_codebox.py  test_local.py  test_worker.py
tests/: _test_codebox.py  _test_python.py  conftest.py  test_bash.py  test_codebox.py  test_container.py  test_in_container.py  test_in_container_nsjail.py  test_local.py  test_logging.py  test_main.py  test_models.py  test_multiple_async_calls.py  test_python.py  test_rust.py  test_sqlite3.py  test_utils.py
worker/: Dockerfile  codebox.py  cpplint.py  lint.py  lint_messages.py  metrics.py  requirements.txt  runner.py  worker.py
worker/runner/: __init__.py  c_cpp_runner.py  go_runner.py  javascript_runner.py  python_runner.py  ruby_runner.py  runner.py
