[tool.poetry]
name = "Codebox"
version = "0.1.0"
description = ""
authors = ["André Felipe Dias <andref.dias@gmail.com>"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "*"
orjson = "*"
loguru = "*"
fastapi = "*"
Hypercorn = "*"
uvloop = "*"

[tool.poetry.dev-dependencies]
alt-pytest-asyncio = "*"
bandit = "*"
blue = "*"
flake8 = "*"
flake8-debugger = "*"
flake8-pytest-style = "*"
httpx = "*"
isort = "*"
mypy = "*"
pep8-naming = "*"
pip-audit = "*"
pyupgrade = "*"
pytest = "*"
pytest-cov = "*"
types-orjson = "*"

[tool.isort]
profile = "black"
line_length = 100

[tool.blue]
line-length = 100

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
